--- a/src/main.css
+++ b/src/main.css
@@ -2,8 +2,17 @@ body {
 	background-color: #ddd;
 }
 
+.blurb {
+	font-family: sans-serif;
+	font-size: 14px;
+	font-weight: 300;
+	letter-spacing: -1px;
+	color: #222244;
+	pointer-events: none;
+}
+
 canvas {
-	position:absolute;
+	position: absolute;
 	left: 0px;
 	top: 0px;
 	width: 100%;
